--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,25 @@
   <meta property="og:title" content="Atomic Fizz Caps" />
   <meta property="og:description" content="Post-apocalyptic browser game with real Solana wallet integration" />
   <title>Atomic Fizz Caps - Pip-Boy</title>
+
+  <!-- Favicon (optional – add your Fallout-style icon) -->
+  <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+
+  <!-- Preconnect for faster font & CDN loading -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://unpkg.com" crossorigin>
+
+  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet" />
+
+  <!-- Leaflet CSS + JS (critical for map) -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+        integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+          integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
+
+  <!-- Your custom Pip-Boy styles -->
   <link rel="stylesheet" href="/css/pipboy.css" />
 </head>
 <body>
@@ -101,7 +119,7 @@
       </div>
     </div>
 
-    <!-- Terminal Overlay (for immersive reading / hacking feel) -->
+    <!-- Terminal Overlay -->
     <div class="terminal hidden" id="terminalOverlay">
       <div class="terminal-header">TERMINAL ACCESS - CLASSIFIED</div>
       <div id="terminalContent"></div>
@@ -109,7 +127,16 @@
     </div>
   </div>
 
-  <script src="/js/narrativeClient.js"></script>
-  <script src="/js/main.js"></script>
+  <!-- Scripts (defer for better performance) -->
+  <script defer src="/js/narrativeClient.js"></script>
+  <script defer src="/js/main.js"></script>
+
+  <!-- Fallback if JS fails -->
+  <noscript>
+    <p style="color: #ff6666; text-align: center; padding: 2rem;">
+      JavaScript is required for the full Pip-Boy experience.<br>
+      Enable JS or check your browser settings.
+    </p>
+  </noscript>
 </body>
 </html>
