--- a/public/index.html
+++ b/public/index.html
@@ -3,26 +3,29 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="theme-color" content="#001100" /> <!-- Dark green Pip-Boy theme -->
   <meta property="og:title" content="Atomic Fizz Caps" />
   <meta property="og:description" content="Post-apocalyptic browser game with real Solana wallet integration" />
+  <meta property="og:image" content="/images/og-image.png" /> <!-- Optional: add later -->
   <title>Atomic Fizz Caps - Pip-Boy</title>
 
-  <!-- Favicon (optional – add your Fallout-style icon) -->
+  <!-- Favicon -->
   <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 
-  <!-- Preconnect for faster font & CDN loading -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="preconnect" href="https://unpkg.com" crossorigin>
+  <!-- Preconnect for performance -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link rel="preconnect" href="https://unpkg.com" crossorigin />
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet" />
 
-  <!-- Leaflet CSS + JS (critical for map) -->
+  <!-- Leaflet CSS + JS (critical for map – with integrity) -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
         integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-          integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
+          integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin="" defer></script>
 
   <!-- Your custom Pip-Boy styles -->
   <link rel="stylesheet" href="/css/pipboy.css" />
@@ -119,7 +122,7 @@
       </div>
     </div>
 
-    <!-- Terminal Overlay -->
+    <!-- Terminal Overlay (immersive reading / hacking feel) -->
     <div class="terminal hidden" id="terminalOverlay">
       <div class="terminal-header">TERMINAL ACCESS - CLASSIFIED</div>
       <div id="terminalContent"></div>
@@ -127,13 +130,12 @@
     </div>
   </div>
 
-  <!-- Scripts (defer for better performance) -->
-  <script defer src="/js/narrativeClient.js"></script>
+  <!-- Scripts – defer for better performance -->
   <script defer src="/js/main.js"></script>
 
   <!-- Fallback if JS fails -->
   <noscript>
-    <p style="color: #ff6666; text-align: center; padding: 2rem;">
+    <p style="color: #ff6666; text-align: center; padding: 2rem; font-family: 'VT323', monospace;">
       JavaScript is required for the full Pip-Boy experience.<br>
       Enable JS or check your browser settings.
     </p>
